Added options and options page, but functionality not implemented

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": [ 
+  "options_page": "options.html",
+  "permissions": [
     "tabs",
     "storage"
   ]
