--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "jest-chrome": "^0.7.2"
   },
   "scripts": {
-    "test": "jest --config=jest.config.js"
+    "test": "jest --config=./tests/jest.config.js"
   },
   "repository": {
     "type": "git",
