--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "",
   "main": "background.js",
   "dependencies": {
+    "copy-webpack-plugin": "^9.0.1",
+    "html-webpack-plugin": "^5.3.2",
     "jest": "^27.2.3"
   },
   "devDependencies": {
-    "jest-chrome": "^0.7.2"
+    "css-loader": "^6.4.0",
+    "jest-chrome": "^0.7.2",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0"
   },
   "scripts": {
+    "start": "webpack --watch --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "test": "jest --config=./tests/jest.config.js"
   },
   "repository": {
