--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "webpack-cli": "^4.9.0"
   },
   "scripts": {
-    "start": "webpack --watch --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
+    "start": "webpack --watch --config ./webpack/webpack.dev.js",
+    "build": "webpack --config ./webpack/webpack.prod.js",
     "test": "jest --config=./tests/jest.config.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AngeloKandah/DuplicateTabCloser.git"
+    "url": "https://github.com/AngeloKandah/DuplicateTabCloser.git"
   },
-  "author": "",
+  "author": "Angelo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AngeloKandah/DuplicateTabCloser/issues"
