--- a/package.json
+++ b/package.json
@@ -4,22 +4,30 @@
   "description": "",
   "main": "background.js",
   "dependencies": {
+    "copy-webpack-plugin": "^9.0.1",
+    "html-webpack-plugin": "^5.3.2",
     "jest": "^27.2.3"
   },
   "devDependencies": {
-    "jest-chrome": "^0.7.2"
+    "css-loader": "^6.4.0",
+    "jest-chrome": "^0.7.2",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0"
   },
   "scripts": {
-    "test": "jest --config=jest.config.js"
+    "start": "webpack --watch --config ./webpack/webpack.dev.js",
+    "build": "webpack --config ./webpack/webpack.prod.js",
+    "test": "jest --config=./tests/jest.config.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AngeloKandah/DuplicateTabDeleter.git"
+    "url": "https://github.com/AngeloKandah/DuplicateTabCloser.git"
   },
-  "author": "",
+  "author": "Angelo",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/AngeloKandah/DuplicateTabDeleter/issues"
+    "url": "https://github.com/AngeloKandah/DuplicateTabCloser/issues"
   },
-  "homepage": "https://github.com/AngeloKandah/DuplicateTabDeleter#readme"
+  "homepage": "https://github.com/AngeloKandah/DuplicateTabCloser#readme"
 }
