--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Duplicate Tab Deleter",
+  "name": "Duplicate Tab Closer",
   "description": "Removes duplicate tabs",
   "version": "1.0",
   "manifest_version": 3,
