--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "jest": "^27.2.3"
   },
   "devDependencies": {
+    "@types/node": "^16.11.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.4.0",
     "jest-chrome": "^0.7.2",
     "style-loader": "^3.3.0",
@@ -18,8 +20,9 @@
   "scripts": {
     "start": "webpack --watch --config ./webpack/webpack.dev.js",
     "build": "webpack --config ./webpack/webpack.prod.js",
-    "test": "jest --config=./tests/jest.config.js"
+    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest --config=./tests/jest.config.js"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/AngeloKandah/DuplicateTabCloser.git"
