--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,11 @@
 {
   "name": "Duplicate Tab Closer",
-  "description": "Removes duplicate tabs",
+  "description": "Removes duplicate tabs.",
   "version": "1.0",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
   },
-  "options_page": "options.html",
   "permissions": [
     "tabs",
     "storage"
