Refactored options page and Added some styling. (#8)
* Put chrome storage in separate file, removed submit changes button

* Put chrome storage in separate file, removed submit changes button

* Changed everything to follow ES6 syntax

* Removed options page, added popup. Removed submit changes, added multiple pages.

* Refined button logic, added log page

* Changed to popup page and some minor changes to background.js

* Minor changes, added some styling

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,14 +1,16 @@
 {
   "name": "Duplicate Tab Closer",
-  "description": "Removes duplicate tabs",
+  "description": "Removes duplicate tabs.",
   "version": "1.0",
   "manifest_version": 3,
   "background": {
     "service_worker": "background.js"
   },
-  "options_page": "options.html",
   "permissions": [
     "tabs",
     "storage"
-  ]
+  ],
+  "action": {
+    "default_popup": "options.html"
+  }
 }
